EXTRA_DIST = \
	frextract.c \
	frextract.m \
	frgetvect.c \
	frgetvect.m \
	frgetvectN.c \
	frgetvectN.m \
        mkframe.c \
	mkframe.m \
	mkframe_simevt.m \
	mymex

matlabsrcdir = $(pkgdatadir)/src/matlab

matlabsrc_DATA = \
	frextract.c \
	frextract.m \
	frgetvect.c \
	frgetvect.m \
	frgetvectN.c \
	frgetvectN.m \
	mkframe.c \
	mkframe.m \
	mkframe_simevt.m
